--- a/info.plist
+++ b/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>com.debugtools.alfredworkflow</string>
+	<string>com.hctools.alfredworkflow</string>
 	<key>connections</key>
 	<dict/>
 	<key>createdby</key>
@@ -13,7 +13,7 @@
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>websearchwkflwupdate</string>
+	<string>hcupdate</string>
 	<key>objects</key>
 	<array/>
 	<key>readme</key>
@@ -21,7 +21,7 @@
 	<key>uidata</key>
 	<dict/>
 	<key>version</key>
-	<string>0.1.0</string>
+	<string>1.0.0</string>
 	<key>webaddress</key>
 	<string></string>
 </dict>
