--- a/info.plist
+++ b/info.plist
@@ -13,7 +13,7 @@
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>websearchwkflwupdate</string>
+	<string>dbgupdt</string>
 	<key>objects</key>
 	<array/>
 	<key>readme</key>
